libreoffice (1:6.4.2-3) UNRELEASED; urgency=medium

  [ Rene Engelhard ]
  * debian/patches/Fix-build-with-boost-lesser-than-1.68.diff: add from
    gerrit, thanks Rico Tschichholz

  * debian/rules:
    - use default boost (and thus system-mdds) again and revert
      BOOST_MINVER= (>= 1.68) change
    - fix redland dependencies for libreoffice-core-nogui 

  [ Jochen Sprickerhof ] 
  * debian/control.in:
    - Prefer libreoffice-core-nogui for -nogui variants
      Closes: #954319
    - Drop -core-nogui in non -nogui packages (if -nogui exists)
    - Fix report_builder and firebird nogui depends

 -- Rene Engelhard <rene@debian.org>  Sat, 21 Mar 2020 22:00:46 +0100

libreoffice (1:6.4.2-2) unstable; urgency=medium

  * debian/control.in:
    - make libreoffice-common Breaks: libreoffice-core (<< 1:6.4.2~rc1)
      (closes: #954323) 
    - also add Breaks/Replaces libreoffice-common (<< 1:6.4.2~rc1~) to
      -nogui (for now)
    - allow libreoffice-draw-nogui in -impress-noguis Depends:
      (closes: #954318)

 -- Rene Engelhard <rene@debian.org>  Fri, 20 Mar 2020 15:23:39 +0000

libreoffice (1:6.4.2-1) unstable; urgency=medium

  * LibreOffice 6.4.2 final (identical to rc2)

  * debian/patches/gengal-message-core.diff: print message and exit with
    an error if -core-nogui (and not -core) is installed. See #952347

  * merge from Ubuntu:
    - Add armhf to OOO_NOGUI_ARCHS

  * upload to unstable 

 -- Rene Engelhard <rene@debian.org>  Thu, 19 Mar 2020 16:01:22 +0100

libreoffice (1:6.4.2~rc2-1) experimental; urgency=medium

  * New upstream release candidate

  * debian/tests/control:
    - make smoketest depend on -writer and -math (not their -nogui variants) 

 -- Rene Engelhard <rene@debian.org>  Wed, 11 Mar 2020 16:21:48 +0000

libreoffice (1:6.4.2~rc1-2) experimental; urgency=medium

  * debian/patches/Revert-tdf130839-Corrects-second-level-left-margin-i.patch:
    remove again.

  * debian/tests/control: add missing python3-uno to uitest-cui and missing