@@ -667,6 +667,8 @@ Depends: fonts-opensymbol (>= 2:102.11),
          libreoffice-core (= ${binary:Version}),
          ${misc:Depends},
          ${shlibs:Depends}
+Replaces: libreoffice-common (<< 1:6.4.2~rc1~)
+Breaks: libreoffice-common (<< 1:6.4.2~rc1~)
 Description: office productivity suite -- equation editor
  LibreOffice is a full-featured office productivity suite that provides
  a near drop-in replacement for Microsoft(R) Office.
@@ -679,8 +681,8 @@ Depends: fonts-opensymbol (>= 2:102.11),
          libreoffice-core-nogui (= ${binary:Version}) | libreoffice-core (= ${binary:Version}),
          ${misc:Depends},
          ${shlibs:Depends}
-Replaces: libreoffice-math
-Conflicts: libreoffice-math
+Replaces: libreoffice-common (<< 1:6.4.2~rc1~), libreoffice-math
+Conflicts: libreoffice-common (<< 1:6.4.2~rc1~), libreoffice-math
 Description: office productivity suite -- equation editor (no GUI variant)
  LibreOffice is a full-featured office productivity suite that provides
  a near drop-in replacement for Microsoft(R) Office.
