@@ -9,6 +9,10 @@ libreoffice (1:6.4.2-3) UNRELEASED; urgency=medium
       BOOST_MINVER= (>= 1.68) change
     - fix redland dependencies for libreoffice-core-nogui 
 
+  * merge from Ubuntu:
+    - libreoffice-math: Add Breaks/Replaces libreoffice-common
+      (<< 1:6.4.2~rc1~)
+
   [ Jochen Sprickerhof ] 
   * debian/control.in:
     - Prefer libreoffice-core-nogui for -nogui variants
